experimental/ir/testdata/extend/duplicate.proto.yaml.stderr.txt
error: field number `1` used in more than one extension for `test.M`
  --> b.proto:7:3
   |
 7 |   optional int32 a = 1;
   |   ^^^^^^^^^^^^^^^^^^^^^
  ::: c.proto:7:3
   |
 7 |   optional int32 b = 1;
   |   --------------------- `1` also used here

encountered 1 error
